@@ -1017,3 +1017,7 @@ limit.
 
 Always allow an epoch of 0.
 ----------------------------------------------------------------------
+Sat Mar 10 15:36:46 2007                        Michael Jennings (mej)
+
+Add /proc workaround.
+----------------------------------------------------------------------
